# advent

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: aoc.py  profiler.py
src/2021/algo/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/2022/algo/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_21_alt_part_1.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/2022/data/: day_15.txt
src/2023/algo/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/2023/sample/: day_20.txt
src/2024/algo/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
src/advent_2020/day_10/: part_1.py  part_2.py
src/advent_2020/day_11/: part_1.py  part_2.py
src/advent_2020/day_12/: part_2.py
src/advent_2020/day_13/: part_2.py
src/advent_2020/day_16/: part_1.py
src/advent_2020/day_17/: part_1.py
src/advent_2021/: helpers.py
src/advent_2022/: helpers.py
(+89 files in other folders)
