[metadata]
name = advent-mathias-gesbert
version = 0.0.1
author = Mathias Gesbert
author_email = mathias.gesbert@gmail.com
description = Advent of Code
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.0

[options.packages.find]
where = src
